--- a/index.html
+++ b/index.html
@@ -51,6 +51,27 @@
       font-size: 1.2em;
       line-height: 1.6;
     }
+    .button {
+      display: inline-block;
+      margin: 10px;
+      padding: 12px 24px;
+      background-color: #00aaff;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+    .button:hover {
+      background-color: #0077cc;
+    }
+    .portfolio-item {
+      background-color: rgba(255,255,255,0.05);
+      margin: 20px auto;
+      padding: 20px;
+      border-radius: 10px;
+      max-width: 600px;
+    }
   </style>
 </head>
 <body>
@@ -60,30 +81,39 @@
 
   <nav>
     <a href="#home">Главная</a>
-    <a href="#about">О нас</a>
-    <a href="#training">Обучение</a>
+    <a href="#portfolio">Портфолио</a>
     <a href="#contacts">Контакты</a>
   </nav>
 
   <main>
     <section id="home">
-      <h2>Добро пожаловать в FinAnaliz</h2>
-      <p>Анализируй. Оптимизируй. Развивайся вместе с нами.</p>
+      <h2>BI-отчётность, которая меняет ваш бизнес</h2>
+      <p>Автоматизация отчётности, дашборды для руководства, интеграция с 1С/CRM/Excel</p>
+      <p>Преимущества: сокращение ручного труда, быстрые управленческие решения, визуализация ключевых метрик</p>
+      <a class="button" href="#contacts">Связаться</a>
+      <a class="button" href="#portfolio">Посмотреть портфолио</a>
     </section>
 
-    <section id="about">
-      <h2>О нас</h2>
-      <p>Мы — команда аналитиков и разработчиков Power BI, помогаем бизнесу расти на основе данных.</p>
-    </section>
-
-    <section id="training">
-      <h2>Обучение</h2>
-      <p>Наши курсы по аналитике, визуализации и автоматизации отчетности.</p>
+    <section id="portfolio">
+      <h2>Портфолио</h2>
+      <div class="portfolio-item">
+        <h3>Пример 1: Дашборд по продажам для розничной сети</h3>
+        <p>Внедрены: анализ по магазинам, товарам, категориям. Повышена прозрачность выручки и маржи.</p>
+      </div>
+      <div class="portfolio-item">
+        <h3>Пример 2: HR-аналитика для крупной компании</h3>
+        <p>Внедрены: текучесть, возрастной профиль, причины увольнений. Снижение затрат на найм на 20%.</p>
+      </div>
+      <div class="portfolio-item">
+        <h3>Пример 3: Финансовый P&L-отчет</h3>
+        <p>Сравнение плана и факта, детализация по клиентам и продуктам. Поддержка управленческих решений.</p>
+      </div>
     </section>
 
     <section id="contacts">
       <h2>Контакты</h2>
-      <p>Email: info@finanaliz.kz<br>Телефон: +7 (777) 000-00-00</p>
+      <p>Телефон: <a href="tel:+77475028555" style="color:#00ffff">+7 747 502 85 55</a></p>
+      <p>Адрес: Almaty Towers, бизнес-центр</p>
     </section>
   </main>
 </body>
