--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       background-color: rgba(0, 0, 0, 0.6);
       padding: 20px;
       text-align: center;
+      animation: fadeInDown 1s ease forwards;
     }
     header h1 {
       margin: 0;
@@ -25,6 +26,7 @@
       justify-content: center;
       background-color: rgba(255, 255, 255, 0.1);
       padding: 10px 0;
+      animation: fadeInDown 1.2s ease forwards;
     }
     nav a {
       color: white;
@@ -42,7 +44,14 @@
     }
     section {
       margin-bottom: 60px;
+      opacity: 0;
+      transform: translateY(30px);
+      animation: fadeInUp 1s ease forwards;
     }
+    section:nth-of-type(2) { animation-delay: 0.5s; }
+    section:nth-of-type(3) { animation-delay: 1s; }
+    section:nth-of-type(4) { animation-delay: 1.5s; }
+
     h2 {
       font-size: 2em;
       margin-bottom: 20px;
@@ -71,6 +80,30 @@
       padding: 20px;
       border-radius: 10px;
       max-width: 600px;
+    }
+    iframe {
+      width: 100%;
+      max-width: 600px;
+      height: 300px;
+      border: none;
+      border-radius: 10px;
+      margin-top: 20px;
+    }
+    @keyframes fadeInUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+    @keyframes fadeInDown {
+      from {
+        opacity: 0;
+        transform: translateY(-30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
   </style>
 </head>
@@ -114,6 +147,7 @@
       <h2>Контакты</h2>
       <p>Телефон: <a href="tel:+77475028555" style="color:#00ffff">+7 747 502 85 55</a></p>
       <p>Адрес: Almaty Towers, бизнес-центр</p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2924.2769327079765!2d76.93845391529718!3d43.24274038848106!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38836cfe9eb39a3b%3A0x3dc493683df03d1b!2sAlmaty%20Towers!5e0!3m2!1sen!2skz!4v1652463590269!5m2!1sen!2skz" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
   </main>
 </body>
