--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Портфолио — FinAnaliz</title>
+<link rel="stylesheet" href="style.css">
   <style>
     body { font-family: Arial, sans-serif; margin: 0; background: #fff; color: #333; }
     header, main { max-width: 960px; margin: auto; padding: 40px 20px; }
