--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Главная — FinAnaliz</title>
-<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>BI-отчётность, которая меняет бизнес</h1>
     <nav>
       <a href="index.html">Главная</a>
       <a href="portfolio.html">Портфолио</a>
       <a href="contacts.html">Контакты</a>
     </nav>
   </header>
+
   <main>
+    <h1>BI-отчётность, которая меняет бизнес</h1>
     <p>Автоматизация отчетности, дашборды, интеграция с 1С / CRM / Excel.</p>
+
     <section>
       <h2>Обо мне</h2>
       <p>Я — BI-аналитик, внедряю отчётность и визуализации, которые помогают принимать управленческие решения.</p>
@@ -26,6 +28,8 @@
         <li>Интеграции с 1С / CRM</li>
         <li>Визуализация и автоматизация</li>
       </ul>
+      <a href="portfolio.html" class="button">Посмотреть портфолио</a>
+      <a href="contacts.html" class="button">Связаться</a>
     </section>
   </main>
 </body>
