--- a/contacts.html
+++ b/contacts.html
@@ -2,34 +2,32 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Контакты — FinAnaliz</title>
-<link rel="stylesheet" href="style.css">
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #fff; color: #333; }
-    header, main { max-width: 960px; margin: auto; padding: 40px 20px; }
-    nav a { margin-right: 20px; color: #007acc; text-decoration: none; font-weight: bold; }
-    iframe { width: 100%; height: 300px; border: 0; margin-top: 20px; }
-    form { display: flex; flex-direction: column; gap: 10px; margin-top: 30px; }
-    input, textarea { padding: 10px; font-size: 1rem; }
-    button { padding: 10px; background: #007acc; color: white; border: none; cursor: pointer; }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Контакты</h1>
-    <nav>
+    <nav class="nav">
       <a href="index.html">Главная</a>
       <a href="portfolio.html">Портфолио</a>
-      <a href="contacts.html">Контакты</a>
+      <a href="contacts.html" class="active">Контакты</a>
     </nav>
   </header>
-  <main>
-    <p>Телефон: <a href="tel:+77475028555">+7 747 502 85 55</a></p>
-    <p>Адрес: Almaty Towers, бизнес-центр</p>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2924.2769327079765!2d76.93845391529718!3d43.24274038848106!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38836cfe9eb39a3b%3A0x3dc493683df03d1b!2sAlmaty%20Towers!5e0!3m2!1sen!2skz!4v1652463590269!5m2!1sen!2skz" allowfullscreen="" loading="lazy"></iframe>
-    <form>
-      <input type="text" placeholder="Ваше имя" required />
-      <input type="email" placeholder="Email" required />
-      <textarea placeholder="Ваше сообщение" rows="4" required></textarea>
-      <button type="submit">Отправить</button>
+
+  <main class="container">
+    <h1>Контакты</h1>
+    <p>Свяжитесь со мной любым удобным способом:</p>
+    <ul>
+      <li>Телефон: <a href="tel:+77475028555">+7 747 502 85 55</a></li>
+      <li>Email: <a href="mailto:info@finanaliz.kz">info@finanaliz.kz</a></li>
+    </ul>
+
+    <h2>Офис</h2>
+    <p>Almaty Towers, бизнес-центр</p>
+    <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2924.6300759695555!2d76.9285133!3d43.2384944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38836ebc796a6e3f%3A0x3a89ef774e452d56!2sAlmaty%20Towers!5e0!3m2!1sru!2skz!4v1688481727070!5m2!1sru!2skz" 
+      width="100%" height="300" style="border:0; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" allowfullscreen="" loading="lazy"></iframe>
+  </main>
+</body>
+</html>
