--- a/portfolio.html
+++ b/portfolio.html
@@ -4,62 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Портфолио — FinAnaliz</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #F5E9D4;
-      color: #111;
-    }
-    header {
-      background: #fff;
-      padding: 20px 0;
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    nav {
-      max-width: 960px;
-      margin: auto;
-      display: flex;
-      gap: 20px;
-      padding: 0 20px;
-    }
-    nav a {
-      color: #007acc;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    main {
-      max-width: 960px;
-      margin: auto;
-      padding: 40px 20px;
-    }
-    .project {
-      background: #fff;
-      margin-bottom: 30px;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-      transition: transform 0.2s ease;
-    }
-    .project:hover {
-      transform: translateY(-3px);
-    }
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-    h2 {
-      margin-top: 0;
-    }
-    @media (max-width: 600px) {
-      nav {
-        flex-direction: column;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
@@ -69,10 +14,11 @@
       <a href="contacts.html">Контакты</a>
     </nav>
   </header>
+
   <main>
     <h1>Примеры проектов</h1>
 
-    <div class="project">
+    <div class="card">
       <h2>Продажи для розничной сети</h2>
       <p>Дашборд с разбивкой по филиалам, категориям и менеджерам. Реализация: Power BI + Excel.</p>
       <ul>
@@ -81,7 +27,7 @@
       </ul>
     </div>
 
-    <div class="project">
+    <div class="card">
       <h2>HR-аналитика</h2>
       <p>Дашборд по текучести и затратам на персонал.</p>
       <ul>
@@ -90,7 +36,7 @@
       </ul>
     </div>
 
-    <div class="project">
+    <div class="card">
       <h2>Финансовый P&L-отчет</h2>
       <p>Сравнение план-факт, отклонения, анализ на уровне клиента и категории товара.</p>
       <ul>
