--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
-<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Главная — FinAnaliz</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Главная — FinanalizKZ</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <nav>
-      <a href="index.html">Главная</a>
-      <a href="portfolio.html">Портфолио</a>
-      <a href="contacts.html">Контакты</a>
-    </nav>
+    <div class="header-container">
+      <img src="logo.png" alt="Логотип FinanalizKZ" class="logo">
+      <nav>
+        <a href="index.html">Главная</a>
+        <a href="portfolio.html">Портфолио</a>
+        <a href="contacts.html">Контакты</a>
+      </nav>
+    </div>
   </header>
 
   <main>
     <h1>BI-отчётность, которая меняет бизнес</h1>
     <p>Автоматизация отчетности, дашборды, интеграция с 1С / CRM / Excel.</p>
-
     <section>
       <h2>Обо мне</h2>
       <p>Я — BI-аналитик, внедряю отчётность и визуализации, которые помогают принимать управленческие решения.</p>
@@ -28,8 +29,7 @@
         <li>Интеграции с 1С / CRM</li>
         <li>Визуализация и автоматизация</li>
       </ul>
-      <a href="portfolio.html" class="button">Посмотреть портфолио</a>
-      <a href="contacts.html" class="button">Связаться</a>
+      <p><a href="portfolio.html">Посмотреть портфолио</a> <a href="contacts.html">Связаться</a></p>
     </section>
   </main>
 </body>
