--- a/portfolio.html
+++ b/portfolio.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Портфолио — FinAnaliz</title>
+  <title>Портфолио — FinanalizKZ</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <nav>
-      <a href="index.html">Главная</a>
-      <a href="portfolio.html">Портфолио</a>
-      <a href="contacts.html">Контакты</a>
-    </nav>
+    <div class="header-container">
+      <img src="logo.png" alt="Логотип FinanalizKZ" class="logo">
+      <nav>
+        <a href="index.html">Главная</a>
+        <a href="portfolio.html">Портфолио</a>
+        <a href="contacts.html">Контакты</a>
+      </nav>
+    </div>
   </header>
 
   <main>
@@ -23,7 +26,7 @@
       <p>Дашборд с разбивкой по филиалам, категориям и менеджерам. Реализация: Power BI + Excel.</p>
       <ul>
         <li>Визуализация выручки, маржи, продаж по SKU</li>
-        <li>Снижение времени подготовки отчетов с 4 часов до 10 минут</li>
+        <li>Снижение времени подготовки отчётов с 4 часов до 10 минут</li>
       </ul>
     </div>
 
@@ -37,7 +40,7 @@
     </div>
 
     <div class="card">
-      <h2>Финансовый P&L-отчет</h2>
+      <h2>Финансовый P&L-отчёт</h2>
       <p>Сравнение план-факт, отклонения, анализ на уровне клиента и категории товара.</p>
       <ul>
         <li>Интеграция с 1С (SQL) и Excel</li>
