--- a/contacts.html
+++ b/contacts.html
@@ -2,32 +2,30 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Контакты — FinAnaliz</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Контакты — FinanalizKZ</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <nav class="nav">
-      <a href="index.html">Главная</a>
-      <a href="portfolio.html">Портфолио</a>
-      <a href="contacts.html" class="active">Контакты</a>
-    </nav>
+    <div class="header-container">
+      <img src="logo.png" alt="Логотип FinanalizKZ" class="logo">
+      <nav>
+        <a href="index.html">Главная</a>
+        <a href="portfolio.html">Портфолио</a>
+        <a href="contacts.html">Контакты</a>
+      </nav>
+    </div>
   </header>
 
-  <main class="container">
+  <main>
     <h1>Контакты</h1>
-    <p>Свяжитесь со мной любым удобным способом:</p>
+    <p>Свяжитесь со мной удобным способом:</p>
     <ul>
-      <li>Телефон: <a href="tel:+77475028555">+7 747 502 85 55</a></li>
-      <li>Email: <a href="mailto:info@finanaliz.kz">info@finanaliz.kz</a></li>
+      <li>Email: your@email.com</li>
+      <li>Телефон: +7 777 777 7777</li>
+      <li>Telegram: @yourusername</li>
     </ul>
-
-    <h2>Офис</h2>
-    <p>Almaty Towers, бизнес-центр</p>
-    <iframe 
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2924.6300759695555!2d76.9285133!3d43.2384944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38836ebc796a6e3f%3A0x3a89ef774e452d56!2sAlmaty%20Towers!5e0!3m2!1sru!2skz!4v1688481727070!5m2!1sru!2skz" 
-      width="100%" height="300" style="border:0; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" allowfullscreen="" loading="lazy"></iframe>
   </main>
 </body>
 </html>
