--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
@@ -8,7 +9,7 @@
 <body>
   <header>
     <div class="header-container">
-      <img src="logo.png" alt="Логотип FinanalizKZ" class="logo">
+      <img src="logo.png" alt="Логотип FinanalizKZ" class="logo" />
       <nav>
         <a href="index.html">Главная</a>
         <a href="portfolio.html">Портфолио</a>
@@ -29,7 +30,6 @@
         <li>Интеграции с 1С / CRM</li>
         <li>Визуализация и автоматизация</li>
       </ul>
-      <p><a href="portfolio.html">Посмотреть портфолио</a> <a href="contacts.html">Связаться</a></p>
     </section>
   </main>
 </body>
