--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="header-container">
-      <img src="logo.png" alt="Логотип FinanalizKZ" class="logo">
+      <img src="logo.png" alt="Логотип FinanalizKZ" class="logo" />
       <nav>
         <a href="index.html">Главная</a>
         <a href="portfolio.html">Портфолио</a>
