--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="header-container">
-      <img src="logo.png" alt="Логотип FinanalizKZ" class="logo">
+      <img src="logo.png" alt="Логотип FinanalizKZ" class="logo" />
       <nav>
         <a href="index.html">Главная</a>
         <a href="portfolio.html">Портфолио</a>
@@ -20,12 +20,8 @@
 
   <main>
     <h1>Контакты</h1>
-    <p>Свяжитесь со мной удобным способом:</p>
-    <ul>
-      <li>Email: your@email.com</li>
-      <li>Телефон: +7 777 777 7777</li>
-      <li>Telegram: @yourusername</li>
-    </ul>
+    <p>Телефон: +7 747 502 8555</p>
+    <p>Адрес: Almaty Towers, бизнес-центр</p>
   </main>
 </body>
 </html>
