--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Главная — FinanalizKZ</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -19,17 +19,32 @@
   </header>
 
   <main>
-    <h1>BI-отчётность, которая меняет бизнес</h1>
+    <h1>FinanalizKZ</h1>
+    <h2>BI-отчётность, которая меняет бизнес</h2>
     <p>Автоматизация отчетности, дашборды, интеграция с 1С / CRM / Excel.</p>
-    <section>
-      <h2>Обо мне</h2>
-      <p>Я — BI-аналитик, внедряю отчётность и визуализации, которые помогают принимать управленческие решения.</p>
-      <ul>
-        <li>Power BI</li>
-        <li>SQL и Excel</li>
-        <li>Интеграции с 1С / CRM</li>
-        <li>Визуализация и автоматизация</li>
-      </ul>
+
+    <div style="height: 3px;"></div>
+
+    <section class="about-section">
+      <div class="about-text">
+        <h2>О нас</h2>
+        <p><strong>Тренер Power BI</strong><br>
+        Кажденова Асия<br>
+        Руководитель направления BIG DATA со стажем более 20 лет.</p>
+
+        <p>Дипломированный преподаватель физики и информатики, со стажем работы в Зап.-Каз. Государственном Университете на кафедре информатики.</p>
+
+        <p>Автоматизировала процессы и внедряла аналитические системы в строительных, логистических, агропроизводственных, нефтедобывающих компаниях, ломбардах, агентстве недвижимости, ритейле, сфере онлайн развлечений.</p>
+
+        <p>Имеет практический опыт в бизнес-аналитике с использованием Power BI.</p>
+
+        <p>Разрабатывала формы и занималась подготовкой различных отчетов для бизнеса, включая процесс написания запросов на MS SQL/MySQL/PostgreSQL.</p>
+
+        <p>Разработала и более 4-х лет успешно ведет тренинги по Power BI.</p>
+      </div>
+      <div class="about-photo">
+        <img src="asiya.jpeg" alt="Фото Кажденовой Асии">
+      </div>
     </section>
   </main>
 </body>
