--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Главная — FinanalizKZ</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -19,17 +19,14 @@
   </header>
 
   <main>
-    <h1>FinanalizKZ</h1>
-    <h2>BI-отчётность, которая меняет бизнес</h2>
-    <p>Автоматизация отчетности, дашборды, интеграция с 1С / CRM / Excel.</p>
-
-    <div style="height: 3px;"></div>
+    <h1 class="headline">BI-отчётность, которая меняет бизнес</h1>
+    <p class="subheadline">Автоматизация отчетности, дашборды, интеграция с 1С / CRM / Excel.</p>
 
     <section class="about-section">
       <div class="about-text">
         <h2>О нас</h2>
-        <p><strong>Тренер Power BI</strong><br>
-        Кажденова Асия<br>
+        <p><strong>Тренер Power BI</strong><br/>
+        Кажденова Асия<br/>
         Руководитель направления BIG DATA со стажем более 20 лет.</p>
 
         <p>Дипломированный преподаватель физики и информатики, со стажем работы в Зап.-Каз. Государственном Университете на кафедре информатики.</p>
@@ -43,7 +40,7 @@
         <p>Разработала и более 4-х лет успешно ведет тренинги по Power BI.</p>
       </div>
       <div class="about-photo">
-        <img src="asiya.jpeg" alt="Фото Кажденовой Асии">
+        <img src="asiya.jpeg" alt="Кажденова Асия" />
       </div>
     </section>
   </main>
